package com.kbak.ecommerce.dto;

import com.kbak.ecommerce.entity.Address;
import com.kbak.ecommerce.entity.Customer;
import com.kbak.ecommerce.entity.Order;
import com.kbak.ecommerce.entity.OrderItem;
import lombok.Data;

import java.util.Set;

@Data
public class Purchase {

    private Customer customer;
    private Address shippingAddress;
    private Address billingAddress;
    private Order order;
    private Set<OrderItem> orderItems;

}
