@startuml

title __DTO's Class Diagram__\n

  namespace com.kbak.ecommerce {
    namespace dto {
      class com.kbak.ecommerce.dto.Purchase {
          - orderItems : Set<OrderItem>
          + Purchase()
          + equals()
          + getBillingAddress()
          + getCustomer()
          + getOrder()
          + getOrderItems()
          + getShippingAddress()
          + hashCode()
          + setBillingAddress()
          + setCustomer()
          + setOrder()
          + setOrderItems()
          + setShippingAddress()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace dto {
      class com.kbak.ecommerce.dto.PurchaseResponse {
          - orderTrackingNumber : String
          + PurchaseResponse()
          + equals()
          + getOrderTrackingNumber()
          + hashCode()
          + toString()
          # canEqual()
      }
    }
  }
  

  com.kbak.ecommerce.dto.Purchase o-- com.kbak.ecommerce.entity.Address : billingAddress
  com.kbak.ecommerce.dto.Purchase o-- com.kbak.ecommerce.entity.Customer : customer
  com.kbak.ecommerce.dto.Purchase o-- com.kbak.ecommerce.entity.Order : order
  com.kbak.ecommerce.dto.Purchase o-- com.kbak.ecommerce.entity.Address : shippingAddress


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
